Add coverage to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 biodb/*
-*.pyc
-doc/*.log
-doc/*.aux
-doc/*.out
 build/
-PyDesc.egg-info/
-lib
-
-*/*.pyc
+.coverage
+doc/*.aux
+doc/*.log
+doc/*.out
 htmlcov/
+lib
+*.pyc
+*/*.pyc
+PyDesc.egg-info/
