--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,9 @@
-black==19.10b0
-md-toc==7.0.3
-mock==4.0.2
-pep8==1.7.1
-pylint==2.5.0
-Pyment==0.3.3
-pytest==5.4.1
-pytest-cov==2.8.1
-snakeviz==2.1.0
+black
+md-toc
+mock
+pep8
+pylint
+Pyment
+pytest
+pytest-cov
+snakeviz
